--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test</title>
 </head>
 <script src="js/jq.js"></script>
 <script src="js/jquery.ScrollToAnyWhere.js"></script>
